<resources>
    <string name="app_name">LiveData</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="change">Change Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
</resources>