<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnred"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#DC0E0E"
        android:text="@string/red"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnblue"
        android:text="@string/blue"
        android:backgroundTint="#224EC6"
        app:layout_constraintStart_toEndOf="@id/btnred"
        android:layout_marginStart="70dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btngreen"
        android:text="@string/green"
        android:backgroundTint="#15D163"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnblue"
        android:layout_marginStart="80dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintTop_toBottomOf="@id/btngreen"
        android:id="@+id/btnplus"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        app:layout_constraintTop_toBottomOf="@id/btnblue"
        app:layout_constraintStart_toEndOf="@id/btnminus"
        android:text="@string/zero"
        android:textSize="@dimen/change_30sp"
        app:layout_constraintEnd_toStartOf="@id/btnplus"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintTop_toBottomOf="@id/btnred"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btnminus" />
    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fragment"
        app:layout_constraintTop_toBottomOf="@id/btnminus"
        android:name="com.shruti.livedataapp.ColorFragment"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>